--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,12 @@
-hello goole 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body style = "background-color:  white; margin  : 0px">
+  <h1>Hello Saurabh Bhati</h1>
+</body>
+</html>
