--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
-    <h1>saurabh bhati</h1>
-    <a href = "/hello.html">Google is the best </a>
+<body style = "background-color:  white; margin  : 0px">
+    
+    <div id="header" style = "background-color: white; padding : 10px; margin : 0px;position :sticky; top : 0px; border-bottom: 0.5px solid lightgray"></div>
+    <div id='main' style = " margin : 0px;background-color: white; font-family: roboto"></div>
+    
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
+  <!-- Load our React component. -->
+  
+ <script src="homepage.js"></script>
+ <script src="header.js"></script>
 </body>
 </html>
